Web App Realization

--- a/PetMagazine.Web/Views/Home/Index.cshtml
+++ b/PetMagazine.Web/Views/Home/Index.cshtml
@@ -1,7 +1,24 @@
-﻿@{
+﻿﻿@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Pet Magazine</h1>
+    <section id="header" style="padding:150px 0 150px 0">
+        <h1 class="display-4" id="h1" text>Welcome</h1>
+    </section>
+
+
+
 </div>
+<style>
+    #header {
+        background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)), url('https://t4.ftcdn.net/jpg/04/15/79/09/360_F_415790935_7va5lMHOmyhvAcdskXbSx7lDJUp0cfja.jpg') no-repeat;
+        background-size: cover;
+    }
+
+    #h1 {
+        padding: 100px 0 100px 0;
+        color: white;
+        font-weight: 800;
+    }
+</style>
